#110 orders table margin fix on small screens

--- a/src/styles/components/terminal/_terminal.scss
+++ b/src/styles/components/terminal/_terminal.scss
@@ -670,8 +670,10 @@
 }
 
 @include media-breakpoint-down(sm) {
-  .terminal-main .charts .chart.trades-table {
+  .terminal-main .charts .chart.orders-table, .terminal-main .charts .chart.trades-table {
     margin-top: 20px;
+  }
+  .terminal-main .charts .chart.trades-table {
     margin-bottom: 20px;
   }
 }
